--- a/Dominoes/MainWindow.xaml
+++ b/Dominoes/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Dominoes"
         mc:Ignorable="d"
-        Title="Dominoes" Height="720" Width="1280" ResizeMode="NoResize" Icon="icon.png">
+        Title="Dominoes" Height="720" Width="1280" ResizeMode="NoResize" Icon="icon.png" Background="{x:Null}">
     <Grid x:Name="GameField">
         <ContentPresenter x:Name="OutputView" />
     </Grid>
